core/b2b/core-services/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  selector:
    app: mongo-express
  type: ClusterIP
